fix: T71718 Collada: importer does not release intermediate fcurves when importing matrix animations